--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ svg {
 }
 
 #header h1 a, #header h1 a:hover {
-  color: #000000;
+  color: #ffffff;
   line-height: 1;
   display: inline-block;
 }
