--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,7 @@ svg {
 .nav-menu a {
   display: block;
   position: relative;
-  color: #fff;
+  color: #000000;
   font-size: 19px;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
